# baremetal_FreeRTOS_stm32F407

./: .cproject  .gitignore  CMakeLists.txt  README.md  STM32F407VGTX_FLASH.ld  f4_d1.launch
CMSIS/Inc/: main.h  stm32f407xx.h
Inc/: FreeRTOSConfig.h
Src/: main.c
cmake/: st-project.cmake
drivers/Inc/: 32f407_adc_regular.h  32f407_delay_timer.h  32f407_i2c.h  32f407_lis3.h  32f407_spi.h
drivers/Src/: 32f407_adc_regular.c  32f407_delay_timer.c  32f407_i2c.c  32f407_lis3.c  32f407_spi.c
freertos/source/: CMakeLists.txt
freertos/source/include/: FreeRTOS.h  portable.h
freertos/source/portable/GCC/ARM_CM4F/: portmacro.h
